# dde-widgets

./: .gitignore  CMakeLists.txt  lupdate.sh
.reuse/: dep5
app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  displaymodepanel.cpp  displaymodepanel.h  editmodepanel.cpp  editmodepanel.h  global.h  instancemodel.cpp  instancemodel.h  instancepanel.cpp  instancepanel.h  instanceproxy.cpp  instanceproxy.h  lupdate.sh  main.cpp  mainview.cpp  mainview.h  pluginspec.cpp  pluginspec.h  src.cmake  widgethandler.cpp  widgethandler.h  widgetmanager.cpp  widgetmanager.h  widgetsserver.cpp  widgetsserver.h  widgetstore.cpp  widgetstore.h
app/accessible/: accessible.h  accessibledefine.h
app/services/: org.deepin.dde.Widgets.service  org.deepin.dde.Widgets.xml
app/services/systemd/: dde-widgets.service
app/translations/: dde-widgets_zh_CN.qm  dde-widgets_zh_CN.ts
app/utils/: animationviewcontainer.cpp  animationviewcontainer.h  appearancehandler.cpp  appearancehandler.h  button.cpp  button.h  geometryhandler.cpp  geometryhandler.h  utils.cpp  utils.h
app/utils/dbus/xml2cpp/types/: dockrect.cpp  dockrect.h  screenrect.cpp  screenrect.h  touchscreeninfolist.cpp  touchscreeninfolist.h  touchscreeninfolist_v2.cpp  touchscreeninfolist_v2.h
calendar/: CMakeLists.txt  plugin.cpp  plugin.h
common/: helper.hpp
debian/: changelog  control  dde-widgets-example.install  dde-widgets.install
example/: CMakeLists.txt  dateplugin.cpp  dateplugin.h  dateplugin.json  plugin.cpp  plugin.h
interface/: CMakeLists.txt  DdeWidgetsConfig.cmake  DdeWidgetsConfig.cmake.in  widgetsglobal.h  widgetsinterface.cpp  widgetsinterface.h  widgetsinterface_p.h
memorymonitor/: CMakeLists.txt  memorywidget.cpp  memorywidget.h  plugin.cpp  plugin.h  src.cmake
memorymonitor/accessible/: accessible.h
memorymonitor/common/: utils.cpp  utils.h
memorymonitor/handler/: mem.cpp
notification/: CMakeLists.txt  bubbleitem.cpp  bubbleitem.h  bubbletitlewidget.cpp  bubbletitlewidget.h  helper.hpp  image.qrc  itemdelegate.cpp  itemdelegate.h  notifycenterwidget.cpp  notifycenterwidget.h  notifylistview.cpp  notifylistview.h  notifymodel.cpp  notifymodel.h  notifywidget.cpp  notifywidget.h  overlapwidet.cpp  overlapwidet.h  plugin.cpp  plugin.h  src.cmake  style.h
notification/accessible/: accessible.h
notification/icons/bloom/: notify_clear.dci
notification/notification/: actionbutton.cpp  appbody.cpp  appbodylabel.cpp  appicon.cpp  bubbletool.cpp  bubbletool.h  button.cpp  button.h  constants.h  iconbutton.h  icondata.cpp  notifysettings.cpp  notifysettings.h  persistence.cpp  persistence.h
tests/: CMakeLists.txt  helper.hpp  main.cpp  ut_instancemodel.cpp  ut_widgetsmanager.cpp
translations/: dde-widgets-calendar_zh_CN.ts  dde-widgets-memorymonitor_zh_CN.qm  dde-widgets-memorymonitor_zh_CN.ts  dde-widgets-notification_zh_CN.qm  dde-widgets-notification_zh_CN.ts  dde-widgets-worldclock_zh_CN.qm  dde-widgets-worldclock_zh_CN.ts  dde-widgets_zh_CN.qm  dde-widgets_zh_CN.ts
worldclock/: CMakeLists.txt  clock.cpp  clock.h  clockpanel.cpp  clockpanel.h  clockview.cpp  clockview.h  global.h  mainview.cpp  mainview.h  plugin.cpp  plugin.h  settingsview.cpp  settingsview.h  src.cmake  timezonemodel.cpp  timezonemodel.h  zonechooseview.cpp  zonechooseview.h
worldclock/accessible/: accessible.h
worldclock/qrc/: datetime.qrc
worldclock/utils/: file_util.cpp  searchinput.cpp  searchinput.h  timezone.cpp
